--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -136,9 +136,26 @@ p.odd {
 
 nav span {
   padding-left: 1rem;
+  transition: all 400ms ease-out;
+}
+
+nav span:hover {
+  text-decoration-line: underline;
+}
+
+nav span a:active {
+  color: #F6F6F6;
 }
 
 @media only screen and (max-width: 580px) {
+  h1 {
+    font-size: 2rem;
+  }
+
+  h3 {
+    font-size: 1.25rem
+  }
+
   .mobile-only {
     display: block;
   }
@@ -162,6 +179,10 @@ nav span {
 
 /* BANNER*/
 
+.right-box {
+  padding-right: 24px;
+}
+
 .left-box {
   width: 60%;
   border: thin transparent solid;
@@ -183,7 +204,6 @@ nav span {
 
 .banner img {
   width: 100%;
-  /*padding: 32px 16px 32px 24px;*/
 }
 
 .banner .right-box {
@@ -219,7 +239,38 @@ button {
   color: #D4D4D5;
   border-radius: 5px;
   font-family: "Open Sans";
+  font-weight: 700;
   font-size: 1rem;
+  border: none;
+}
+
+button:hover {
+  background-color: #555659;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 960px) {
+  h1 {
+    font-size: 1.75rem;
+  }
+
+  h3 {
+    font-size: 1rem;
+  }
+
+  button {
+    height: 2rem;
+    font-size: 0.7rem;
+  }
+
+  h2 {
+    font-size: 1.4rem;
+  }
+
+  .banner-text {
+    width: 85%;
+    padding-left: 1rem;
+  }
 }
 
 @media only screen and (max-width: 580px) {
@@ -230,14 +281,21 @@ button {
 
   .banner .left-box {
     width: 100%;
-    height: 180px;
+    height: 220px;
     background-image: url("../images/banner.jpg");
     background-size: cover;
   }
 
-  .banner .right-box {
-    width: 100%;
+  .left-box {
+    border: none;
+  }
 
+  .banner .right-box {
+    width: 90%;
+  }
+
+  .right-box {
+    padding-right: 0;
   }
 
   .banner img {
@@ -246,7 +304,7 @@ button {
 
   .banner-text {
     padding: 32px 16px 32px 16px;
-    width: 70%;
+    width: 100%;
   }
 
   .banner-text h1 {
@@ -275,7 +333,7 @@ button {
 .information-main {
   margin: 0;
   text-align: left;
-  padding: 16px 16px 32px 24px;
+  padding: 0 16px 32px 24px;
 }
 
 .information-main h2 {
@@ -302,6 +360,7 @@ button {
   display: block;
   padding-top: 16px;
   font-size: 0.75rem;
+  font-style: italic;
 }
 
 .right-box {
@@ -322,6 +381,11 @@ button {
   align-items: center;
   padding: 16px;
   background-color: rgba(22, 23, 27, 0.2);
+  transition: all 0.8s ease;
+}
+
+.highlight-box:hover {
+  background-color: rgba(22, 23, 27, 0.5);
 }
 
 .feature-details {
@@ -334,6 +398,20 @@ button {
 .feature-details span {
   padding-top: 16px;
 }
+
+.read-more a {
+  transition: all 400ms ease-out;
+  font-weight: 700;
+}
+
+.read-more a:hover {
+  text-decoration-line: underline;
+}
+
+.read-more a:active {
+  color: #F6F6F6;
+}
+
 
 .feature-details h3 {
   padding-bottom: 8px;
@@ -388,14 +466,25 @@ button {
 }
 
 .course {
-  min-height: 220px;
+  /*min-height: 220px;*/
   max-width: 220px;
   text-align: left;
   margin: 0 32px 16px 32px;
+  transition: all 0.5s ease-out;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.course:hover {
+  transform: scale(1.05);
+  cursor: pointer;
 }
 
 .course img {
   width: 100%;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .course-detail {
@@ -403,6 +492,8 @@ button {
   flex-direction: column;
   padding: 16px 16px 24px 16px;
   background-color: rgba(22, 23, 27, 0.5);
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 .course-detail h3,
@@ -441,12 +532,16 @@ button {
     max-width: 350px;
     min-height: 0px;
     text-align: center;
-    padding: 16px 16px 16px 16px;
-    margin: 0 0 10px 0;
+    padding: 8px 16px 8px 16px;
+    margin: 0 0 0 0;
     border: thin transparent solid;
   }
 
-
+  .course-detail {
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    padding: 16px 16px 16px 16px;
+  }
 
   #courses {
     width: 100%;
@@ -495,6 +590,14 @@ video {
   color: #D4D4D5;
 }
 
+#thesis-main .highlight-box {
+  transition: all 0.8s ease-out;
+}
+
+#thesis-main .highlight-box:hover {
+  cursor: pointer;
+}
+
 @media only screen and (max-width: 580px) {
   #hide-thesis {
     display: none;
@@ -505,8 +608,22 @@ video {
   }
 
   .thesis-video {
-    padding: 0;
+    padding: 0 0 0 0;
     margin: 0;
+  }
+  #thesis-main {
+    border: none;
+    margin: 0;
+    padding: 0;
+    display: block;
+  }
+
+  #outer-thesis {
+    display: block;
+  }
+
+  video {
+    display: block;
   }
 
 }
@@ -542,6 +659,18 @@ video {
   padding-left: 1rem;
 }
 
+.terms span a {
+  transition: all 400ms ease-out;
+}
+
+.terms span a:hover {
+  text-decoration-line: underline;
+}
+
+.terms span a:active {
+  color: #F6F6F6;
+}
+
 .copyright span,
 .terms a {
   color: #D4D4D5;
@@ -557,6 +686,10 @@ video {
   }
 
   .outer-foot {
+    border: none;
+  }
+
+  #footer {
     border: none;
   }
 
