--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -237,6 +237,7 @@ button {
   width: 100%;
   background-color: #404144;
   color: #D4D4D5;
+  opacity: 0.8;
   border-radius: 5px;
   font-family: "Open Sans";
   font-weight: 700;
@@ -489,6 +490,7 @@ button:hover {
 
 .course-detail {
   display: flex;
+  min-height: 130px;
   flex-direction: column;
   padding: 16px 16px 24px 16px;
   background-color: rgba(22, 23, 27, 0.5);
