--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -520,6 +520,7 @@ button:hover {
   .course-detail span {
     display: none;
     padding: 0;
+
   }
 
   .course-grid {
@@ -543,6 +544,7 @@ button:hover {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     padding: 16px 16px 16px 16px;
+    min-height: 0;
   }
 
   #courses {
