--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -23,7 +23,7 @@ h3,
 h4 {
   font-family: "raleway";
   color: #D4F4DA;
-  font-weight: 800;
+  font-weight: 600;
 }
 
 h2 {
@@ -126,7 +126,7 @@ p.odd {
 }
 
 .logo-title .colmar {
-  font-weight: 800;
+  font-weight: 400;
   color: #D4F4DA;
 }
 
@@ -282,7 +282,7 @@ button:hover {
 
   .banner .left-box {
     width: 100%;
-    height: 220px;
+    height: 180px;
     background-image: url("../images/banner.jpg");
     background-size: cover;
   }
@@ -313,6 +313,11 @@ button:hover {
   }
   .banner-text h3 {
     padding-bottom: 24px;
+  }
+
+  button {
+    height: 3rem;
+    font-size: 1rem;
   }
 }
 
